attempt to add swagger-router, added a few repository methods
